--- a/sample_config.toml
+++ b/sample_config.toml
@@ -63,6 +63,13 @@ address = "192.168.1.187:9000"
 # transcode_to = "h264"
 # Note: Transcoding requires additional CPU resources and will add latency
 
+# Optionally specify which encoder to use for transcoding (default: "auto"):
+# transcode_device = "auto"      # Auto-detect (try hardware, fallback to software)
+# transcode_device = "vaapi"     # Force hardware encoding (VAAPI/Intel Quick Sync)
+# transcode_device = "x264"      # Force software encoding (slower, works everywhere)
+# transcode_device = "/dev/dri/renderD128"  # Use specific GPU device
+# Note: Hardware encoding requires GPU access in Docker (see docs)
+
 # By default neolink will use any means to connect to the camera
 # from a UID
 # This include relaying via reolink servers
