--- a/Cargo.toml
+++ b/Cargo.toml
@@ -33,6 +33,7 @@ neolink_core = { path = "crates/core", version = "0.6.3-rc.3" }
 once_cell = "1.19.0"
 quick-xml = { version = "0.36.1", features = ["serialize"] }
 regex = "1.7.3"
+reqwest = { version = "0.12.0", features = ["json"] }
 rumqttc = "0.24.0"
 serde = { version = "1.0.160", features = ["derive"] }
 serde_json = "1.0.96"
